--- a/templates/login.html
+++ b/templates/login.html
@@ -17,17 +17,17 @@
               {% endif %}
             {% endwith %}
 
-            <form method="POST">
-                <div class="mb-3">
-                    <label>Username</label>
-                    <input type="text" name="username" class="form-control" required>
-                </div>
-                <div class="mb-3">
-                    <label>Password</label>
-                    <input type="password" name="password" class="form-control" required>
-                </div>
-                <button type="submit" class="btn btn-primary w-100">Login</button>
-            </form>
+            <form action="/login" method="POST" autocomplete="off">
+    <div class="mb-3">
+        <label>Username</label>
+        <input type="text" name="username" class="form-control" autocomplete="off" placeholder="Username" required>
+    </div>
+    <div class="mb-3">
+        <label>Password</label>
+        <input type="password" name="password" class="form-control" autocomplete="new-password" placeholder="Password" required>
+    </div>
+    <button type="submit" class="btn btn-primary w-100">Login</button>
+</form>
             <div class="mt-3 text-center">
                 <p>New student? <a href="/register">Register here</a></p>
             </div>
